# OpenGL-Image-Viewer

./: CMakeLists.txt  README.md  glimview.cpp  glimview.hpp  main.cpp
